--- a/SFCSharpServerLib/SFCSharpServerLib.csproj
+++ b/SFCSharpServerLib/SFCSharpServerLib.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Extends\" />
+    <Compile Remove="Application\Extends\**" />
+    <EmbeddedResource Remove="Application\Extends\**" />
+    <None Remove="Application\Extends\**" />
   </ItemGroup>
 
 </Project>
