--- a/SFHttpServer/SFHttpServer.csproj
+++ b/SFHttpServer/SFHttpServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SFCSharpServerLib\SFCSharpServerLib.csproj" />
+    <ProjectReference Include="..\SFTcpServer\SFTcpServer.csproj" />
   </ItemGroup>
 
 </Project>
